improved functionality and updated readme

--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,14 +1,14 @@
-<h1 style="padding-left:550px">Database Access Framework</h1>
+<h1 style="padding-left:500px">Database Access Framework</h1>
 <p style="padding-left:600px">Hi! please login to your account</p>
 <br><br>
-<form method="post" action="/loginuser">
+<form style="padding-left:500px" method="post" action="/loginuser">
     <label for="email">Email</label>
     <input type="email" name="email" id="email" placeholder="Your email ID" autofocus/>
     <br><br>
     <label for="password">Password</label>
-    <input type="password" name="password" id="password" placeholder="Your Password"/>
+    <input  type="password" name="password" id="password" placeholder="Your Password"/>
     <br><br>
-    <h5>Don't have an account? <a href="/signup">Sign up</a></h5>
+    <h5 >Don't have an account? <a href="/signup">Sign up</a></h5>
     <button type="submit">Submit</button>
 </form>
 
