--- a/templates/landing.gohtml
+++ b/templates/landing.gohtml
@@ -1,5 +1,5 @@
 <h1> Hi!<h1>
-<h2>search for your database<h2>
+<h2>Login to your database<h2>
 <form method="post" action="/fetchdb">
     <label for="dbhost">DB Host</label>
     <input type="text" name="dbhost" id="dbhost" placeholder="Enter host name" autofocus/>
